--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,11 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="in.skonda.qrcodesacannerexample.MainActivity">
 
     <TextView
@@ -23,31 +23,52 @@
 
     <Button
         android:id="@+id/scanner"
-        android:layout_width="250dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:gravity="center"
         android:onClick="scanQR"
-        android:text="QR Code"
-        android:textSize="18dp" >
-    </Button>
+        android:text="QR Code scanner"
+        android:textSize="18dp"></Button>
 
     <Button
         android:id="@+id/scanner2"
-        android:layout_width="250dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:gravity="center"
         android:onClick="scanBar"
-        android:text="Bar Code"
-        android:textSize="18dp" >
-    </Button>
+        android:text="Bar Code scanner"
+        android:textSize="18dp"></Button>
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv"/>
+        android:layout_gravity="center"
+        android:textSize="18dp"
+        android:text="Qrcode generator"
+        android:layout_margin="10dp"
+        android:onClick="qrGen"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="18dp"
+        android:text="Barcode generator"
+        android:layout_margin="10dp"
+        android:onClick="brGen"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </ScrollView>
 
 </LinearLayout>
