--- a/app/src/main/res/layout/activity_code_builder.xml
+++ b/app/src/main/res/layout/activity_code_builder.xml
@@ -26,6 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:padding="20dp"
+        android:textSize="18dp"
         android:text="generate"
         android:onClick="gen"/>
 </RelativeLayout>
